fix responsiveness on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   }
 
   .search-field {
-    @apply relative w-full max-h-9 md:max-w-72;
+    @apply relative w-full max-h-9 sm:w-72;
 
     .search-icon {
       @apply absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-primary;
@@ -30,11 +30,11 @@
   }
 
   .actions-row {
-    @apply grid grid-cols-1 gap-3 w-full lg:grid-cols-[minmax(220px,1fr)_auto] lg:items-center;
+    @apply flex flex-col gap-3 w-full sm:w-fit sm:flex-row sm:flex-wrap sm:items-center sm:gap-2 lg:flex-nowrap sm:ml-auto;
   }
 
   .intro-row {
-    @apply flex flex-col gap-5 lg:flex-row justify-between space-y-4;
+    @apply flex flex-col gap-5 lg:flex-row lg:items-center justify-between;
   }
 
   .item-view {
